feat(shuffle): add make commands for benchmarks

--- a/shufflesort/original/Makefile
+++ b/shufflesort/original/Makefile
@@ -8,8 +8,11 @@ main: $(OBJS)
 main.o: main.cpp
 	$(CC) $(CXXFLAGS) -c main.cpp
 
-bench:
-	time ./main ../input.txt > output.txt
+null:
+	time ./main ../input.txt > /dev/null
+
+output:
+	time ./main ../input.txt > output.txt && cat output.txt | sha256sum
 
 clean:
 	rm -f $(OBJS) main output.txt
